2013-09-01  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincItem.cs:
	* ZincIName.cs:
	* ZincScope.cs:
	* ZincModel.cs:
	* MiniZinc.bison:
	* ZincNameBase.cs:
	* ZincFunction.cs:
	* ZincPredicate.cs:
	* ZincException.cs:
	* ZincNamespace.cs:
	* MiniZincParser.cs:
	* ZincINamespace.cs:
	* ZincVarDeclItem.cs:
	* ZincParseException.cs:
	* ZincGlobalVariable.cs: 

2013-09-01  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.bison: 

2013-09-01  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* Manpage.txt:
	* MiniZinc.cs:
	* AcasType.cs:
	* MiniZinc.lex:
	* MiniZinc.bison:
	* Interaction.cs:
	* EvaluationResult.cs:
	* CompilerVerbosity.cs: 

2013-08-27  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* jobshop.mzn:
	* ZincItem.cs:
	* ZincData.cs:
	* ZincType.cs:
	* AcasType.cs:
	* ZincModel.cs:
	* ZincScalar.cs:
	* ZincCompound.cs:
	* ZincInstance.cs:
	* ZincEnumItem.cs:
	* jobshop2x2.data:
	* AcasConstant.cs:
	* AcasVariable.cs:
	* AcasOperator.cs:
	* ZincIdentifier.cs:
	* ZincTypeInstance.cs:
	* AcasGenericFunction.cs:
	* AcasFunctionInstance.cs:
	* AcasBinaryOperatorFlags.cs: 
